welcome.lessons.welcome.loopdowhile.Poucet2.scala.error
Poucet:1: error: Missing closing brace `}' assumed here
while (!sortieTrouvee) {
^Poucet:8: error: 'while' expected but identifier found.
avance() 
^Poucet:10: error: '(' expected but '}' found.
	}
        ^